crates/reinhardt-pages/tests/ui/form_values/fail/unit_struct.rs
use reinhardt_pages::FormValues;

#[derive(Clone, PartialEq, FormValues)]
struct BadFormValues;

fn main() {}
